# Satisficing_Against_Optimizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: FIGURE_PREP.md  preregistration.md  runs.md
outputs/analysis/exp_band_v4/: frontier.csv  frontier_pareto.csv  frontier_pareto_by_N.csv  scaling.csv
outputs/analysis/exp_k_v4/: frontier.csv  frontier_pareto_by_N.csv  scaling.csv
outputs/analysis/exp_kg_call_cap_v4/: frontier.csv  frontier_pareto.csv  frontier_pareto_by_N.csv  scaling.csv
outputs/analysis/exp_kg_call_v4/: frontier.csv  frontier_pareto.csv  (+2 more)
outputs/exp_band_v4/: manifest.json
outputs/exp_k_v4/: manifest.json
outputs/exp_kg_call_cap_v4/: manifest.json
outputs/exp_kg_call_v4/: manifest.json
outputs/exp_kg_ticker_v4/: manifest.json
outputs/exp_kg_v4/: manifest.json
outputs/exp_opt_call_v4/: manifest.json
outputs/exp_opt_ticker_v4/: manifest.json
outputs/exp_opt_v4/: manifest.json
p2p/: __init__.py
p2p/agents/: __init__.py  learner.py  optimizer.py  prosumer.py  satisficer.py  zi.py
p2p/env/: __init__.py  devices.py  params.py  profiles.py
p2p/market/: __init__.py  clearing.py  order_book.py
p2p/sim/: __init__.py  aggregate.py  analysis.py  analysis_cli.py  exp_runner.py  metrics.py  overlay.py  plots_final.py  profiling.py  run.py  theory.py
p2p/tests/: __init__.py  test_agents.py  test_decision.py  test_instrumentation.py  test_matching.py  test_metrics.py  test_smoke.py
scripts/: package_release_artifacts.sh  repro_figs_v4.sh  run_final_v4.sh
(+549 files in other folders)
